--- a/week02/holygrail.html
+++ b/week02/holygrail.html
@@ -8,7 +8,9 @@
     <meta name="author" content="Arnold Pring">
 </head>
 <body>
-    <h1>A Holy Grail Layout Example</h1>
+    <header>
+        <h1>A Holy Grail Layout Example</h1>
+    </header>
     <nav>
         <ul>
             <li><a href="https://www.byupathway.edu/">BYU-Pathway Worldwide</a></li>
