--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
         <title>Arnold Pring | WDD 130</title>
+        <link rel="stylesheet" href="styles/styles.css">
+        <meta name="description" content="A common layout of course homepage for practice">
+        <meta name="author" content="Arnold Pring">
     </head>
     <body>
         <header>
@@ -18,6 +21,11 @@
             <img src="images/profile.jpg" alt="Hello! My name is Arnold Pring" width="200">
             <p>Hello! My name is Arnold Pring and I am from the Philippines. I love to explore the beauty of nature.</p>
         </main>
+        <aside>
+            <h2>Philippines</h2>
+            <img src="images/philippines.jpeg" alt="Philippine Island">
+            <p>The Philippines, officially the Republic of the Philippines, is an archipelagic country in Southeast Asia. In the western Pacific Ocean, it consists of 7,641 islands, with a total area of 300,000 square kilometers, which are broadly categorized in three main geographical divisions from north to south: Luzon, Visayas, and Mindanao</p>
+        </aside>
         <footer>
             <p>©2024 🌴 Arnold Pring 🌴 Philippines</p>
         </footer>
