--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -35,7 +35,7 @@
             <li>French Gray #BBBBBF</li>
         </ul>
         <p>Palette URL: <a href="https://coolors.co/52d1dc-475b5a-8d8e8e-a3a9aa-bbbbbf" target="_blank">https://coolors.co/52d1dc-475b5a-8d8e8e-a3a9aa-bbbbbf</a></p>
-        <h3>Typography</h3>
+        <h3>Typography: Roboto and Rock Salt</h3>
         <h4>Headings Example Font</h4>
         <h4>Normal Text/Paragraph Example Font</h4>
         <p>Example text - Lorem ipsum.</p>
