--- a/wwr/about.html
+++ b/wwr/about.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
     <link rel="stylesheet" href="styles/rafting.css">
+    <meta name="description" content="About us Page">
+    <meta name="author" content="Arnold Pring">
 </head>
 <body>
     <header>
