added title name

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
+    <title>Rafting Site - About Us</title>
     <link rel="stylesheet" href="styles/rafting.css">
     <meta name="description" content="About us Page">
     <meta name="author" content="Arnold Pring">
