--- a/wwr/about.html
+++ b/wwr/about.html
@@ -33,16 +33,26 @@
         </section>
         <section>
             <h2>Advanture Awaits You!</h2>
-            <img src="images/rafting1.jpg" alt="Rafting1">
-            <figcaption>Rafting down the streams</figcaption>
-            <img src="images/rafting2.jpg" alt="Rafting2">
-            <figcaption>Happy Rafting</figcaption>
-            <img src="images/rafting3.jpg" alt="Rafting3">
-            <figcaption>Power Ranger Helmets</figcaption>
-            <img src="images/rafting4.jpg" alt="Rafting4">
-            <figcaption>Raft boats resting</figcaption>
-            <img src="images/rafting5.jpg" alt="Rafting5">
-            <figcaption>Fun Rafting</figcaption>
+            <figure>
+                <img src="images/rafting1.jpg" alt="Rafting1">
+                <figcaption>Rafting down the streams</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting2.jpg" alt="Rafting2">
+                <figcaption>Happy Rafting</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting3.jpg" alt="Rafting3">
+                <figcaption>Power Ranger Helmets</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting4.jpg" alt="Rafting4">
+                <figcaption>Raft boats resting</figcaption>
+            </figure>
+            <figure>
+                <img src="images/rafting5.jpg" alt="Rafting5">
+                <figcaption>Fun Rafting</figcaption>
+            </figure>
         </section>
     </main>
     <footer>
