float right sociallinks

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -59,17 +59,19 @@
     </main>
     <footer>
         <p>©2024 🌴 Rafting Site Document 🌴 Arnold Pring</p>
-        <nav class="sociallinks">
-            <a href="https://facebook.com">
-                <img src="images/facebook.svg" alt="Faceboook">
-            </a>
-            <a href="https://twitter.com">
-                <img src="images/twitter.svg" alt="Faceboook">
-            </a>
-            <a href="https://instagram.com">
-                <img src="images/instagram.svg" alt="Faceboook">
-            </a>
-        </nav>
+        <div class="sociallinks">
+            <nav class="sociallinks">
+                <a href="https://facebook.com">
+                    <img src="images/facebook.svg" alt="Faceboook">
+                </a>
+                <a href="https://twitter.com">
+                    <img src="images/twitter.svg" alt="Faceboook">
+                </a>
+                <a href="https://instagram.com">
+                    <img src="images/instagram.svg" alt="Faceboook">
+                </a>
+            </nav>
+        </div>
     </footer>
 </body>
 </html>
