--- a/wwr/about.html
+++ b/wwr/about.html
@@ -58,8 +58,9 @@
         </section>
     </main>
     <footer>
-        <p>©2024 🌴 Rafting Site Document 🌴 Arnold Pring</p>
         <div class="sociallinks">
+            <div></div>
+            <p>©2024 🌴 Rafting Site Document 🌴 Arnold Pring</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
                     <img src="images/facebook.svg" alt="Faceboook">
