--- a/wwr/about.html
+++ b/wwr/about.html
@@ -59,7 +59,9 @@
     </main>
     <footer>
         <div class="sociallinks">
-            <div></div>
+            <div>
+                
+            </div>
             <p>©2024 🌴 Rafting Site Document 🌴 Arnold Pring</p>
             <nav class="sociallinks">
                 <a href="https://facebook.com">
