--- a/wwr/about.html
+++ b/wwr/about.html
@@ -32,7 +32,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis ut commodi obcaecati et natus repudiandae. Cumque exercitationem architecto, consequuntur est impedit deleniti nostrum! Doloribus, illo unde perspiciatis commodi dicta quia totam, dolorem illum porro officiis debitis ea earum, consequuntur quo aspernatur ullam nihil eaque! Nostrum id hic itaque fuga sapiente exercitationem excepturi, porro praesentium molestiae perspiciatis nemo cupiditate fugiat beatae?</p>
         </section>
         <section>
-            <h2>Advanture Awaits You!</h2>
+            <h2>Adventure Awaits You!</h2>
             <section class="adventure">
                 <figure>
                     <img src="images/rafting1.jpg" alt="Rafting1">
@@ -60,7 +60,7 @@
     <footer>
         <div class="sociallinks">
             <div>
-                
+
             </div>
             <p>©2024 🌴 Rafting Site Document 🌴 Arnold Pring</p>
             <nav class="sociallinks">
