--- a/quiz.html
+++ b/quiz.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W05 Online Quiz</title>
     <link rel="stylesheet" href="styles/quiz.css">
+    <meta name="description" content="Poll Form">
+    <meta name="author" content="Arnold Pring">
 </head>
 <body>
     <header>
@@ -15,10 +17,11 @@
             <fieldset>
                 <legend>Questions</legend>
                 <div class="form-item">
-                    <label>1. What does the acronym CSS stand for?<input type="text" name="q1"></label>
+                    <label for="q1">1. What does the acronym CSS stand for?</label>
+                    <input type="text" id="q1" name="q1">
                 </div>
                 <div class="form-item">
-                    <label>2. How are id and class attributes selected in CSS?</label>
+                    <label for="q2">2. How are id and class attributes selected in CSS?</label>
                     <textarea name="q2" id="q2"rows="5" cols="20"></textarea>
                 </div>
                 <div class="form-item">
