--- a/week05/poll-form.html
+++ b/week05/poll-form.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WDD 130 | HTML Form - User Poll</title>
     <link rel="stylesheet" href="styles/poll-form.css">
+    <meta name="description" content="Poll Form">
+    <meta name="author" content="Arnold Pring">
 </head>
 <body>
     <header>
