--- a/quiz.html
+++ b/quiz.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>W05 Online Quiz</title>
     <link rel="stylesheet" href="styles/quiz.css">
-    <meta name="description" content="Poll Form">
+    <meta name="description" content="Online Quiz">
     <meta name="author" content="Arnold Pring">
 </head>
 <body>
