--- a/index.html
+++ b/index.html
@@ -18,21 +18,23 @@
                 <a href="https://facebook.com">Facebook</a>
             </nav>
         </header>
-        <main>
-            <h1>Arnold Pring | WDD 130</h1>
-            <img src="images/profile.jpg" alt="Hello! My name is Arnold Pring" width="200">
-            <p>Hello! My name is Arnold Pring and I am from the Philippines. I love to explore the beauty of nature. I am one of three children and also a middle child. I have a beautiful wife. I am a dad of two kids, the oldest is a two year old girl and the youngest is a five month old baby boy. I love going on a trip together with my family. I love them very much. I wouldn't be able to live a good life without them by my side. They are everything to me. They are my daily inspiration. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque alias autem cupiditate repellendus cumque beatae ea optio ut magni, dolorum labore similique reprehenderit. Et quibusdam aliquid quaerat sint officiis, voluptatibus laboriosam numquam placeat laudantium eius sapiente odio quod nulla, natus, asperiores dolorum commodi pariatur nisi reprehenderit. Ipsam quidem ea repellendus.</p>
-            <ul class="box">
-                <li><a href="https://churchofjesuschrist.org/imgs/eed1439015e47d43916bc7c9701d9c32e71c67cc/full/320%2C/0/default" target="_blank">Canada Edmonton Temple</a></li>
-                <li><a href="https://churchofjesuschrist.org/imgs/cf62ebb59aefa1d2856981fb77574fb9982c5fad/full/320%2C/0/default" target="_blank">Manila Philippines Temple</a></li>
-                <li><a href="https://churchofjesuschrist.org/imgs/1b2c438fbf03dce153643292f31889fcc54dd95a/full/320%2C/0/default" target="_blank">Cebu Philippines Temple</a></li>
-            </ul>
-        </main>
-        <aside class="box">
-            <h2>Philippines</h2>
-            <img src="images/philippines.jpeg" alt="Philippine Island">
-            <p>The Philippines, officially the Republic of the Philippines, is an archipelagic country in Southeast Asia. In the western Pacific Ocean, it consists of 7,641 islands, with a total area of 300,000 square kilometers, which are broadly categorized in three main geographical divisions from north to south: Luzon, Visayas, and Mindanao</p>
-        </aside>
+        <div class="grid">
+            <main>
+                <h1>Arnold Pring | WDD 130</h1>
+                <img src="images/profile.jpg" alt="Hello! My name is Arnold Pring" width="200">
+                <p>Hello! My name is Arnold Pring and I am from the Philippines. I love to explore the beauty of nature. I am one of three children and also a middle child. I have a beautiful wife. I am a dad of two kids, the oldest is a two year old girl and the youngest is a five month old baby boy. I love going on a trip together with my family. I love them very much. I wouldn't be able to live a good life without them by my side. They are everything to me. They are my daily inspiration. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Atque alias autem cupiditate repellendus cumque beatae ea optio ut magni, dolorum labore similique reprehenderit. Et quibusdam aliquid quaerat sint officiis, voluptatibus laboriosam numquam placeat laudantium eius sapiente odio quod nulla, natus, asperiores dolorum commodi pariatur nisi reprehenderit. Ipsam quidem ea repellendus.</p>
+                <ul class="box">
+                    <li><a href="https://churchofjesuschrist.org/imgs/eed1439015e47d43916bc7c9701d9c32e71c67cc/full/320%2C/0/default" target="_blank">Canada Edmonton Temple</a></li>
+                    <li><a href="https://churchofjesuschrist.org/imgs/cf62ebb59aefa1d2856981fb77574fb9982c5fad/full/320%2C/0/default" target="_blank">Manila Philippines Temple</a></li>
+                    <li><a href="https://churchofjesuschrist.org/imgs/1b2c438fbf03dce153643292f31889fcc54dd95a/full/320%2C/0/default" target="_blank">Cebu Philippines Temple</a></li>
+                </ul>
+            </main>
+            <aside class="box">
+                <h2>Philippines</h2>
+                <img src="images/philippines.jpeg" alt="Philippine Island">
+                <p>The Philippines, officially the Republic of the Philippines, is an archipelagic country in Southeast Asia. In the western Pacific Ocean, it consists of 7,641 islands, with a total area of 300,000 square kilometers, which are broadly categorized in three main geographical divisions from north to south: Luzon, Visayas, and Mindanao</p>
+            </aside>
+        </div>
         <footer>
             <p>©2024 🌴 Arnold Pring 🌴 Philippines</p>
         </footer>
