--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -74,13 +74,30 @@
             <form action="">
                 <h1>Send us a Message</h1>
                 <p>Send us a message and we'll respond within 24 hours.</p>
-                <div class="form-item">
-                    <label for="name">Name:</label>
-                    <input type="text" id="name" name="name" placeholder="Your name">
+                <div class="emailname">
+                    <div class="form-item">
+                        <label for="name">Name</label>
+                        <input type="text" id="name" name="name" placeholder="Your name">
+                    </div>
+                    <div class="form-item">
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" placeholder="Your email address">
+                    </div>
                 </div>
-                <div class="form-item">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" placeholder="Your email address">
+                <div class="radiobuttoncont">
+                    <h2>What the purpose of your message? Select one</h2>
+                    <div class="radiobutton">
+                        <input type="radio" id="gen_inq" value="gen_inq">
+                        <label for="gen_inq">General Inquiry</label>
+                    </div>
+                    <div class="radiobutton">
+                        <input type="radio" id="res_ques" value="res_ques">
+                        <label for="res_ques">Reservation Question</label>
+                    </div>
+                    <div class="radiobutton">
+                        <input type="radio" id="web_sug" value="web_sug">
+                        <label for="web_sug">Website Suggestion</label>
+                    </div>
                 </div>
                 <div class="form-item">
                     <label for="message">Message</label>
