--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -72,7 +72,7 @@
         </div>
         <div class="form">
             <form action="">
-                <h1>Send us a Message</h1>
+                <h1>Comment Form</h1>
                 <p>Send us a message and we'll respond within 24 hours.</p>
                 <div class="emailname">
                     <div class="form-item">
@@ -102,6 +102,15 @@
                 <div class="form-item">
                     <label for="message">Message</label>
                     <textarea name="message" id="feedback" rows="4"></textarea>
+                </div>
+                <div class="checkboxcont">
+                    <div class="checkbox">
+                        <input type="checkbox" id="subs" name="subs">
+                        <label for="subs">Please subscribe me to the monthly newsletter</label>
+                    </div>
+                </div>
+                <div>
+                    <button>Submit</button>
                 </div>
             </form>
         </div>
