--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -117,8 +117,8 @@
     </main>
     <footer>
         <div class="sociallinks">
-            <div>
-
+            <div class="wireframe">
+                <a href="https://app.moqups.com/v685hbOykQ8nfFvbNwGslVVELk54n1Hi/view/page/ad12de680">Contact us Wireframe</a>
             </div>
             <p>©2024 🌴 Rafting Site Document 🌴 Arnold Pring</p>
             <nav class="sociallinks">
