--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -115,7 +115,7 @@
             </form>
         </div>
     </main>
-    <footer>
+    <footer class="contact">
         <div class="sociallinks">
             <div class="wireframe">
                 <a href="https://app.moqups.com/v685hbOykQ8nfFvbNwGslVVELk54n1Hi/view/page/ad12de680">Contact us Wireframe</a>
