--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -49,7 +49,7 @@
                     <p>+1-617-555-0108</p>
                 </div>
                 <div class="maps">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.885300255283!2d-71.08530072349772!3d42.34496873605429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a105392510f%3A0x5866d3f62b9be7db!2s177%20Huntington%20Ave%20Ste%201703%2C%20Boston%2C%20MA%2002115%2C%20USA!5e0!3m2!1sen!2sph!4v1717531828429!5m2!1sen!2sph" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2948.885300255283!2d-71.08530072349772!3d42.34496873605429!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89e37a105392510f%3A0x5866d3f62b9be7db!2s177%20Huntington%20Ave%20Ste%201703%2C%20Boston%2C%20MA%2002115%2C%20USA!5e0!3m2!1sen!2sph!4v1717531828429!5m2!1sen!2sph" width="600" height="450" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             </div>
         </aside>
