--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -71,7 +71,7 @@
             </div>
         </div>
         <div class="form">
-            <form action="">
+            <form>
                 <h1>Comment Form</h1>
                 <p>Send us a message and we'll respond within 24 hours.</p>
                 <div class="emailname">
@@ -101,7 +101,7 @@
                 </div>
                 <div class="form-item">
                     <label for="message">Message</label>
-                    <textarea name="message" id="feedback" rows="4"></textarea>
+                    <textarea name="message" id="message" rows="4"></textarea>
                 </div>
                 <div class="checkboxcont">
                     <div class="checkbox">
