--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -110,7 +110,7 @@
                     </div>
                 </div>
                 <div>
-                    <button>Submit My Comment</button>
+                    <button type="submit">Submit My Comment</button>
                 </div>
             </form>
         </div>
