--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rafting Site - Contact</title>
     <link rel="stylesheet" href="styles/rafting.css">
-    <meta name="description" content="Contact Page">
+    <meta name="description" content="Contact Page - Send Us a Message">
     <meta name="author" content="Arnold Pring">
 </head>
 <body>
