--- a/wwr/about.html
+++ b/wwr/about.html
@@ -12,7 +12,7 @@
     <header>
         <img src="images/logo.png" alt="Logo">
         <nav>
-            <a href="../index.html">Index</a>
+            <a href="index.html">Index</a>
             <a href="about.html">About</a>
             <a href="trips.html">Trips</a>
             <a href="contact.html">Contact</a>
@@ -36,7 +36,7 @@
             <section class="adventure">
                 <figure>
                     <img src="images/rafting1.jpg" alt="Rafting1">
-                    <figcaption>Rafting down the streams</figcaption>
+                    <figcaption>Rafting streams</figcaption>
                 </figure>
                 <figure>
                     <img src="images/rafting2.jpg" alt="Rafting2">
@@ -44,11 +44,11 @@
                 </figure>
                 <figure>
                     <img src="images/rafting3.jpg" alt="Rafting3">
-                    <figcaption>Power Ranger Helmets</figcaption>
+                    <figcaption>Helmets</figcaption>
                 </figure>
                 <figure>
                     <img src="images/rafting4.jpg" alt="Rafting4">
-                    <figcaption>Raft boats resting</figcaption>
+                    <figcaption>Raft Resting</figcaption>
                 </figure>
                 <figure>
                     <img src="images/rafting5.jpg" alt="Rafting5">
